<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnltMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/txtvwHello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    <TextView
        android:id="@+id/txtvwYamba"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/yamba_title" />
    <LinearLayout
        android:id="@+id/lnltMiddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

    	<TextView
    	    android:id="@+id/txtvwNumero"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:gravity="center|right" />

    	<Button
    	    android:id="@+id/edtbtnButton"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/tamanho_botao" />

        <EditText
            android:id="@+id/edtxtMultlinText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_placeholder"
            android:inputType="textMultiLine"
            android:maxLength="140" />

    </LinearLayout>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/submit_botao" />

</LinearLayout>